# safeai

./: .gitignore  .gitleaks.toml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  RELEASE_NOTES_v0.1.0-rc1.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.8.1.md  REUSE.toml  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  package.json  pyproject.toml  safeai.yaml  sitemap.xml  skills-registry.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  required-checks.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  docs.yml  governance-gate.yml  quality.yml  secret-scan.yml  vulnerability-scan.yml  workflow-sanity.yml
agents/: default.yaml
changelog/: index.html
cli/: index.html
contracts/: example.yaml
contributing/code-of-conduct/: index.html
contributing/guide/: index.html
contributing/onboarding/: index.html
docs/: 00-brainstorm.md  01-vision-and-philosophy.md  02-conceptual-framework.md  03-personas-and-user-journeys.md  04-product-requirements.md  05-feature-specification.md  06-ux-ui-design.md  07-system-design.md  08-technology-and-data-design.md  09-compliance-and-governance.md  10-product-roadmap.md  11-go-to-market-strategy.md  12-lean-startup-docs.md  13-business-plan-and-pitch.md  14-build-plan.md  15-delivery-tracker.md  16-architecture-review-2026-02-20.md  17-quickstart.md  18-contributor-onboarding-playbook.md  README.md  SafeAI-pitch-deck.pptx  SafeAI-roadmap-deck.pptx  changelog.md  generate_pitch_deck.py  generate_roadmap_deck.py  index.md
docs/cli/: index.md
docs/contributing/: code-of-conduct.md  guide.md  onboarding.md
docs/examples/: coding-agents.md  openclaw.md  proxy-deployment.md  sdk-quickstart.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: agent-identity.md  agent-messaging.md  alerting-observability.md  approval-workflows.md  audit-logging.md  capability-tokens.md  content-moderation.md  cost-governance.md  creating-plugins.md  dangerous-commands.md  encrypted-memory.md  enterprise-features.md  intelligence.md  multi-provider-routing.md  pii-protection.md  policy-engine.md  secret-detection.md  skills-system.md  structured-scanning.md  tool-contracts.md  troubleshooting.md
docs/integrations/: autogen.md  claude-adk.md  coding-agents.md  crewai.md  google-adk.md  index.md  langchain.md  plugins.md  proxy-sidecar.md
docs/notebooks/: index.md
docs/overrides/: main.html
docs/project/: architecture.md  compatibility.md  governance.md  roadmap.md  security.md  vision.md
docs/reference/: alerting.md  approval.md  audit.md  config-models.md  contracts.md  dashboard.md  identity.md  intelligence.md  interceptor.md  memory.md  middleware.md  models.md  policy.md  proxy.md  safeai.md  secrets.md  structured.md
docs/stylesheets/: extra.css
examples/: e2e_example.py  integration_langchain.py  intelligence_usage.py  plugin_authoring.py  policy_config.py  proxy_setup.py  quickstart.py
examples/coding-agents/: index.html
examples/openclaw/: index.html
examples/proxy-deployment/: index.html
examples/sdk-quickstart/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/agent-identity/: index.html
guides/agent-messaging/: index.html
guides/alerting-observability/: index.html
guides/approval-workflows/: index.html
guides/audit-logging/: index.html
guides/capability-tokens/: index.html
guides/content-moderation/: index.html
guides/cost-governance/: index.html
guides/creating-plugins/: index.html
integrations/: index.html
lib/: registry.js  skills-manager.js
notebook/: agent_messaging.ipynb  api_call_test.ipynb  approval_workflow.ipynb  audit_logging.ipynb  capability_tokens.ipynb  hook_adapter.ipynb  memory_controller.ipynb  policy_engine.ipynb  proxy_server.ipynb  structured_scanning.ipynb  tool_interception.ipynb
notebooks/: index.html
overrides/: main.html
safeai/: __init__.py  __main__.py  advanced.py  api.py
safeai/alerting/: email.py  (+4 more)
schemas/: README.md
search/: search_index.json
stylesheets/: extra.css
tenants/: policy-sets.yaml
tests/: E2E_TEST_PLAN.md  test_action_interceptor.py  test_agent_identity.py  test_agent_profiles.py  test_alert_push_evaluation.py  test_alerting_channels.py  test_alerts_cli.py  test_approval_workflow.py  test_audit_query.py  test_autogen_adapter.py  test_benchmark_gate.py  test_capability_tokens.py  test_claude_adk_adapter.py  test_coding_agent_policy.py  test_crewai_adapter.py  test_dashboard_phase5.py  test_data_models.py  test_google_adk_adapter.py  test_hook_adapter.py  test_integration_flow.py  test_intelligence_auto_config.py  test_intelligence_backend.py  test_intelligence_cli.py  test_intelligence_compliance.py  test_intelligence_incident.py  test_intelligence_integration.py  test_intelligence_recommender.py  test_intelligence_sanitizer.py  test_langchain_adapter.py  test_mcp_server.py  test_memory_controller.py  test_memory_security.py  test_observability.py  test_observe_cli.py  test_output_fallback.py  test_phase3_security_e2e.py  test_plugin_system.py  test_policy_engine.py  test_policy_templates.py  test_proxy_api.py  (+8 more)
(+191 files in other folders)
