[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safeai-sdk"
version = "0.8.1"
description = "Framework-agnostic runtime boundary enforcement for AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "SafeAI Contributors" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
keywords = ["ai-safety", "guardrails", "llm", "agent-security", "policy-engine"]
dependencies = [
  "click>=8.1,<9",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "PyYAML>=6.0,<7",
  "jsonschema>=4.22,<5",
  "structlog>=24,<26",
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "cryptography>=42,<47",
  "httpx>=0.27,<1",
  "rich>=13.7,<15",
  "questionary>=2.0,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "pytest-benchmark>=4.0,<6",
  "ruff>=0.4,<1",
  "mypy>=1.9,<2",
  "pip-audit>=2.7,<3"
]
vault = [
  "hvac>=2.3,<3"
]
aws = [
  "boto3>=1.34,<2"
]
mcp = [
  "mcp>=1.0,<2"
]
all = [
  "hvac>=2.3,<3",
  "boto3>=1.34,<2",
  "mcp>=1.0,<2"
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.24,<2",
  "mkdocs-minify-plugin>=0.8,<1"
]

[project.urls]
Homepage = "https://enendufrankc.github.io/safeai/"
Repository = "https://github.com/enendufrankc/safeai"
Documentation = "https://enendufrankc.github.io/safeai/"
"Bug Tracker" = "https://github.com/enendufrankc/safeai/issues"

[project.scripts]
safeai = "safeai.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["safeai*"]

[tool.setuptools.package-data]
"safeai" = ["config/defaults/**/*.yaml", "config/defaults/**/*.py", "config/defaults/**/*.json", "schemas/**/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_optional = true
